--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# aes = { git = "https://github.com/o1810156/aes.git", rev = "6f9bfbfc629814955ea4823e58a1a5eaaa6328cf" }
+aes = { git = "https://github.com/o1810156/aes.git", rev = "917a082e5916b5f4177584f6fe37b7576bd3b9e8", features = ["const_gmul"] }
 rand = "0.8.5"
+anyhow = "1.0.58"
